# nrb2026

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  POSTMORTEM.md  bench.sh  cloudformation.yml  compose.yaml  nrb2026-bench-patch-1.sh  problem.json  rust-toolchain.toml
.claude/skills/smart-friend/: SKILL.md
bench/: Cargo.toml
bench/fixtures/: README.md
bench/src/: main.rs
docs/: README.md  idea.md  project.md
docs/authoring/: README.md  dev-loop.md  norms.md
docs/authoring/research/: bench-survey-12f.md  bench-survey-12q.md  bench-survey-13.md  bench-survey-14.md  bench-survey-9q.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  auth.ts  imageEncode.ts  index.css  types.ts
frontend/src/components/: CampaignImage.tsx  Layout.tsx
frontend/src/pages/: CampaignDetail.tsx  Charges.tsx  Home.tsx  Login.tsx  Me.tsx  NewCampaign.tsx  SavedSearches.tsx
mitamae/cookbooks/bench/: default.rb
mitamae/cookbooks/benchwarmer/: default.rb
mitamae/cookbooks/benchwarmer/files/opt/benchwarmer/: bootstrap.sh
mitamae/cookbooks/common/: default.rb
mitamae/cookbooks/docker/: default.rb
mitamae/cookbooks/envoy/: default.rb
mitamae/cookbooks/ipaddr/: default.rb
mitamae/cookbooks/isuwari/: default.rb
mitamae/cookbooks/isuwari/files/opt/isuwari/: bootstrap.sh
mitamae/cookbooks/mysql/: default.rb
mitamae/cookbooks/nftables/: default.rb
mitamae/cookbooks/rustup/: default.rb
mitamae/cookbooks/webapp/: default.rb
mitamae/roles/: default.rb
packer/: ami.pkr.hcl
scripts/: build-ami.sh  build.sh  dev-bench.sh  e2e.sh  fetch-bench-fixtures.sh  test-local.sh
seed-data/: Cargo.toml
seed-data/src/: lib.rs
seed-gen/: Cargo.toml
seed-gen/src/: main.rs
webapp/: Cargo.toml
webapp/sql/: schema.sql  seed.base.sql
webapp/src/: main.rs  tests.rs
